# vsomeip-demo

./: CMakeLists.txt  build.sh  readme.md
conf/: vsomeip-local.json
include/: common_ids.h  pub.h  request.h  response.h  sub.h
src/: main.cpp  pub.cpp  request.cpp  response.cpp  sub.cpp
